# nrf_zb_zcl_generator

./: CMakeLists.txt  README.md  gen_zcl.py  prj.conf  prj.yaml  zigbee-r23.code-workspace  сборка под новую.txt
boards/: nrf52840dk_nrf52840.overlay  nrf52_adafruit_feather.overlay  nrf52dk_nrf52832.overlay  promicro_nrf52840_my_nrf52840.overlay
boards/others/promicro_nrf52840_my/: Kconfig.defconfig  Kconfig.promicro_nrf52840_my  board.cmake  board.yml  promicro_nrf52840_nrf52840_common.dts
include/: bme280.h  vcc.h  zb_range_extender.h  zb_zcl_struct.h  zephyr_drivers.h
src/: bme280.c  main.c  vcc.c  zb_zcl_struct.c  zephyr_drivers.c
zigbee2mqtt/: nord.js
